# budget_chemical

./: MultipleCarbonBudget.py  README.md  SimpleCarbonBudget.py  setup.py
.devcontainer/: devcontainer.json
data/: EDGAR_CO2bio_1970_2022.xlsx  EDGAR_F-gases_AR5g_1990_2022.xlsx  globalbudget.csv
kpetchem_budget/: BUGFIX_SUMMARY.md  MODEL_LOGIC_EXPLAINED.md  README.md  TROUBLESHOOTING.md  __init__.py  allocator.py  app.py  data_layer.py  datastore.py  explain_model_logic.py  parameter_space.py  pathway.py  pyproject.toml  requirements.txt  run_app.py  run_dashboard.py  show_budget_ranges.py  simulator.py  test_app_fix.py  test_deployment.py  test_imports.py
kpetchem_budget/dashboard/: app.py  app_upgraded.py  components.py
kpetchem_budget/sample_data/: kpetchem_demo.csv
kpetchem_budget/tests/: test_allocator.py  test_app_smoke.py  test_parameter_grid.py  test_pathway.py  test_pathway_2023_2050.py  test_simulator.py
lib/: budgetCalculation.py  dataAPI.py  pathwayCalculation.py  utils.py
